# smart-meter-energy-forecasting

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
data/interim/: data_cleaned.csv  data_encoded.csv  forecast.csv  train.csv
models/: lgbm_features.pkl  lgbm_model.pkl
notebooks/: 00_save_data_as_parquet.ipynb  01_data_description.ipynb  02_exploratory_data_analysis.ipynb  03_data_cleaning.ipynb  04_data_encoding.ipynb  05_time_series_analysis.ipynb  05_train_test_split.ipynb  06_train_baseline_model.ipynb  06_train_test_split.ipynb  07_naive_forecast.ipynb  07_var_forecast.ipynb  08_lgbm_forecast.ipynb  09_smart_home_use_cases.ipynb  10_all_in_one.ipynb
