[project]
name = "talent-value-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "pip>=25.1.1",
    "plotly>=6.1.2",
    "pyod>=2.0.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
