[project]
name = "talent-value-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastparquet>=2024.11.0",
    "keras-tcn>=3.5.6",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "optuna>=4.3.0",
    "pip>=25.1.1",
    "plotly>=6.1.2",
    "prophet>=1.1.7",
    "pyarrow>=20.0.0",
    "pyod>=2.0.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.47.2",
    "statsmodels>=0.14.4",
    "tensorflow>=2.19.0",
]
